<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="EventHeader_Typ" Id="{d9b38ca9-a82f-0cf1-3f03-5c03330f848b}">
    <Declaration><![CDATA[TYPE EventHeader_Typ :
STRUCT
	SubsysID:		eSubsystemID;
	pFlowID:		POINTER TO DINT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>